// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatContainer > should have a shadow DOM with rendered content 1`] = `
<cds-aichat-react>
  <div
    slot="aiTooltipAfterDescriptionElement"
  />
  <div
    slot="welcomeNodeBeforeElement"
  />
  <div
    slot="headerBottomElement"
  />
  <div
    slot="headerFixedActionsElement"
  />
  <div
    slot="beforeInputElement"
  />
  <div
    slot="afterInputElement"
  />
  <div
    slot="footerElement"
  />
  <div
    slot="homeScreenHeaderBottomElement"
  />
  <div
    slot="homeScreenAfterStartersElement"
  />
  <div
    slot="homeScreenBeforeInputElement"
  />
  <div
    slot="customPanelElement"
  />
  <div
    slot="workspacePanelElement"
  />
</cds-aichat-react>
`;

exports[`ChatContainer > should open chat when launcher is clicked 1`] = `
<cds-aichat-react>
  <div
    slot="aiTooltipAfterDescriptionElement"
  />
  <div
    slot="welcomeNodeBeforeElement"
  />
  <div
    slot="headerBottomElement"
  />
  <div
    slot="headerFixedActionsElement"
  />
  <div
    slot="beforeInputElement"
  />
  <div
    slot="afterInputElement"
  />
  <div
    slot="footerElement"
  />
  <div
    slot="homeScreenHeaderBottomElement"
  />
  <div
    slot="homeScreenAfterStartersElement"
  />
  <div
    slot="homeScreenBeforeInputElement"
  />
  <div
    slot="customPanelElement"
  />
  <div
    slot="workspacePanelElement"
  />
</cds-aichat-react>
`;

exports[`ChatContainer > should render PageObjectId elements in shadow DOM 1`] = `
<cds-aichat-react>
  <div
    slot="aiTooltipAfterDescriptionElement"
  />
  <div
    slot="welcomeNodeBeforeElement"
  />
  <div
    slot="headerBottomElement"
  />
  <div
    slot="headerFixedActionsElement"
  />
  <div
    slot="beforeInputElement"
  />
  <div
    slot="afterInputElement"
  />
  <div
    slot="footerElement"
  />
  <div
    slot="homeScreenHeaderBottomElement"
  />
  <div
    slot="homeScreenAfterStartersElement"
  />
  <div
    slot="homeScreenBeforeInputElement"
  />
  <div
    slot="customPanelElement"
  />
  <div
    slot="workspacePanelElement"
  />
</cds-aichat-react>
`;

exports[`ChatContainer > should render slotted content 1`] = `
<cds-aichat-react>
  <div
    slot="aiTooltipAfterDescriptionElement"
  />
  <div
    slot="welcomeNodeBeforeElement"
  />
  <div
    slot="headerBottomElement"
  >
    <div
      data-testid="custom-header"
    >
      Custom Header Content
    </div>
  </div>
  <div
    slot="headerFixedActionsElement"
  />
  <div
    slot="beforeInputElement"
  />
  <div
    slot="afterInputElement"
  />
  <div
    slot="footerElement"
  />
  <div
    slot="homeScreenHeaderBottomElement"
  />
  <div
    slot="homeScreenAfterStartersElement"
  />
  <div
    slot="homeScreenBeforeInputElement"
  />
  <div
    slot="customPanelElement"
  />
  <div
    slot="workspacePanelElement"
  />
</cds-aichat-react>
`;
